# nfl-player-lookup-rag

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
chroma_db/a6da2c54-9960-4794-b815-988cba72030d/: index_metadata.pickle
resources/: yearly_player_stats_offense.csv
resources/all-MiniLM-L6-v2.pt/: README.md  config.json  tokenizer_config.json
src/nfl-player-lookup-rag/: config.py  doc_generator.py  vector_interface.py
src/nfl_player_lookup_rag/: __init__.py  config.py  data_model.py  doc_generator.py  doc_utils.py  embedding_handler.py  generate_db.py  infer.py  main.py  vector_interface.py
tests/: test_infer.py
tests/resources/: log.csv  outputs.csv  rag_eval_dataset_refined.csv  rag_eval_dataset_refined.csv:Zone.Identifier
