[project]
name = "nfl-player-lookup-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.42.83",
    "pandas>=3.0.2",
    "pyspark>=4.1.1",
    "sparknlp>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.9",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
nfl-player-lookup-rag = { path = "src/nfl_player_lookup_rag", editable = true}
